--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,3 +21,29 @@ $default-padding : 10px;
 
   }
 }
+
+.search-input::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: white;
+}
+.search-input::-moz-placeholder { /* Firefox 19+ */
+  color: white;
+}
+.search-input:-ms-input-placeholder { /* IE 10+ */
+  color: white;
+}
+.search-input:-moz-placeholder { /* Firefox 18- */
+  color: white;
+}
+
+.search-input {
+  height: 35px;
+  width: 210px;
+  color: white;
+  background-color: transparent;
+  border: none;
+  border-bottom: solid 1px;
+  outline: none;
+  span>label {
+    color: white;
+  }
+}
