--- a/src/styles.scss
+++ b/src/styles.scss
@@ -24,13 +24,30 @@ $candy-app-theme: mat-light-theme($candy-app-primary, $candy-app-accent, $candy-
 // that you are using.
 @include angular-material-theme($candy-app-theme);
 
-body,html {
+@font-face {
+  font-family: myfont;
+  src: url("https://s3-ap-southeast-1.amazonaws.com/finandesk-static/assets/fonts/PRODUCT_SANS_REGULAR.eot") /* EOT file for IE */
+}
+@font-face {
+  font-family: myfont;
+  src: url("https://s3-ap-southeast-1.amazonaws.com/finandesk-static/assets/fonts/PRODUCT_SANS_REGULAR.ttf") /* TTF file for CSS3 browsers */
+}
+@font-face {
+  font-family: myfont_bold;
+  src: url("https://s3-ap-southeast-1.amazonaws.com/finandesk-static/assets/fonts/PRODUCT_SANS_SEMIBOLD.ttf") /* EOT file for IE */
+}
+
+html,body {
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
   -webkit-overflow-scrolling: touch;
+  font-size: 14px;
+  font-family: myfont;
+  overflow-x: hidden;
+}
+
+input {
+  font-family: myfont;
 }
 
 .column {
@@ -43,10 +60,32 @@ body,html {
   align-items: center;
 }
 
+.uppercase {
+  text-transform: uppercase;
+}
+
+[hidden] {
+  opacity: 0 !important;
+}
+
 .loading { border-bottom-left-radius: 5px;border-bottom-right-radius: 5px;background-color:transparent; text-align: center; }
 .isCenter {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(34,87,167,1);
+  background-color: #DBDBDB;
+}
+::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+  background-color: #F5F5F5;
+}
+::-webkit-scrollbar-thumb {
+  background-color: rgba(34,87,167,1);
+  border: 2px solid rgba(34,87,167,1);
 }
