--- a/src/app/component/home/home.scss
+++ b/src/app/component/home/home.scss
@@ -1,4 +1,10 @@
+$size-img: 250px;
+$padding-default : 10px;
+
 .home {
+  .header {
+    margin-bottom: $padding-default*2;
+  }
   .banner {
     max-width: 980px;
     width: 100%;
@@ -10,7 +16,33 @@
       position: relative;
       .demo-tab-group {
         border: 1px solid #e8e8e8;
-        max-width: 100%;
+        width: 100%;
+
+        .list-product {
+          padding: $padding-default;
+          .item-product::after {
+            box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+            opacity: 0;
+            transition: opacity 0.3s ease-in-out;
+          }
+          .item-product:hover::after {
+            opacity: 1;
+          }
+          .item-product:hover {
+            -webkit-box-shadow: 0 5px 15px rgba(0,0,0,0.3);
+          }
+          .item-product {
+            padding: $padding-default;
+            width: $size-img;
+            -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+            transition: box-shadow 0.3s ease-in-out;
+            .img img {
+              width: $size-img;
+              height: $size-img;
+              object-fit: scale-down;
+            }
+          }
+        }
       }
 
       .demo-tab-content {
